Guarda los datos de donacion

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -22,132 +22,91 @@
         android:id="@+id/Nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="116dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="16dp"
         android:text="hola"
         android:textColor="#C61438"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toEndOf="@+id/email"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/bttnPuntos"
-        android:layout_width="141dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="365dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="135dp"
-        android:layout_marginBottom="308dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/blue_bg"
         android:text=" Puntos de recoleccón"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="141dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="623dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/blue_bg"
-        android:text="Configuración"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.469" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="63dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="623dp"
-        android:layout_marginEnd="312dp"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.227"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.458"
-        app:srcCompat="@drawable/icono_config" />
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="87dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="365dp"
-        android:layout_marginEnd="287dp"
-        android:layout_marginBottom="308dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="22dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView10"
+        app:layout_constraintEnd_toStartOf="@+id/bttnPuntos"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
         app:srcCompat="@drawable/icono_puntos" />
 
     <Button
         android:id="@+id/CrearORG"
-        android:layout_width="141dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="291dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="135dp"
-        android:layout_marginBottom="382dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/blue_bg"
         android:text="Donar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bttnPuntos"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <Button
         android:id="@+id/bttnEvento"
-        android:layout_width="141dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="448dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="135dp"
-        android:layout_marginBottom="225dp"
+        android:layout_marginBottom="27dp"
         android:background="@drawable/blue_bg"
         android:text="Eventos"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/alimentosbttn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/imageView10"
+        app:layout_constraintTop_toBottomOf="@+id/bttnPuntos" />
 
     <Button
         android:id="@+id/alimentosbttn"
-        android:layout_width="141dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="533dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="140dp"
         android:background="@drawable/blue_bg"
         android:text="Alimentos requeridos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="87dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="290dp"
-        android:layout_marginEnd="294dp"
-        android:layout_marginBottom="383dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="17dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView7"
+        app:layout_constraintEnd_toStartOf="@+id/CrearORG"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icono_donacion"
@@ -155,33 +114,29 @@
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="100dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="448dp"
-        android:layout_marginEnd="287dp"
-        android:layout_marginBottom="225dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.588"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView11"
+        app:layout_constraintEnd_toStartOf="@+id/bttnEvento"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.467"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
         app:srcCompat="@drawable/icono_eventos"
         tools:srcCompat="@drawable/icono_eventos" />
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="102dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="22dp"
-        android:layout_marginTop="533dp"
-        android:layout_marginEnd="287dp"
+        android:layout_marginEnd="11dp"
         android:layout_marginBottom="140dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/alimentosbttn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10"
         app:srcCompat="@drawable/basket"
         tools:srcCompat="@drawable/basket" />
 
@@ -189,23 +144,22 @@
         android:id="@+id/buttonLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="23dp"
         android:layout_marginBottom="33dp"
         android:background="@drawable/btn_bg"
         android:text="Log off"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button3" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="81dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/CrearORG"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Nombre"
-        app:layout_constraintVertical_bias="0.164" />
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/Nombre" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
