--- a/app/src/main/res/layout/activity_evento_org.xml
+++ b/app/src/main/res/layout/activity_evento_org.xml
@@ -37,8 +37,30 @@
         app:cornerRadius="9dp"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <Button
+        android:id="@+id/crearORG2"
+        android:layout_width="323dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="43dp"
+        android:backgroundTint="#B5F36C"
+        android:onClick="editarEvento"
+        android:text="Editar"
+        android:textColor="#0B0A0A"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:cornerRadius="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/button9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.3" />
 
     <Button
         android:id="@+id/button9"
