Cambiar nombre de donacion

--- a/app/src/main/res/layout/activity_punto_recoleccion.xml
+++ b/app/src/main/res/layout/activity_punto_recoleccion.xml
@@ -29,6 +29,7 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/map_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +43,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textPuntosInfo"
 
-    />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
