--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img" />
+        app:srcCompat="@drawable/no" />
 
     <TextView
         android:id="@+id/textView11"
