Centrar texto en Puntos de Recoleccion

--- a/app/src/main/res/layout/activity_punto_recoleccion.xml
+++ b/app/src/main/res/layout/activity_punto_recoleccion.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="19dp"
         android:text="Puntos de Recolección"
+        android:textAlignment="center"
         android:textColor="#35424A"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textPuntosInfo"
@@ -25,6 +26,7 @@
         android:layout_marginTop="128dp"
         android:layout_marginBottom="100dp"
         android:text="Consulta tu punto de recolección más cercano"
+        android:textAlignment="center"
         android:textColor="#F75F6A"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/map_placeholder"
