--- a/app/src/main/res/drawable/btn_other.xml
+++ b/app/src/main/res/drawable/btn_other.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="@color/red">
+    <solid android:color="@color/blue">
     </solid>
-    <corners android:radius="30dip"></corners>
+    <corners android:radius="3dip"></corners>
 </shape>
