--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#E91E47</color>
-    <color name="purple_500">#E91E47</color>
-    <color name="purple_700">#E91E47</color>
-    <color name="teal_200">#2F6699</color>
-    <color name="teal_700">#2F6699</color>
+    <color name="red">#E91E47</color>
+    <color name="blue">#2F6699</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
