--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,30 +10,31 @@
         android:id="@+id/imageView5"
         android:layout_width="99dp"
         android:layout_height="66dp"
-        app:layout_constraintBottom_toTopOf="@+id/Nombre"
+        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.808"
+        app:layout_constraintVertical_bias="0.412"
         app:srcCompat="@drawable/usuario" />
 
     <TextView
         android:id="@+id/Nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
+        android:layout_marginTop="18dp"
         android:text="hola"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/bttnPuntos"
         android:layout_width="155dp"
-        android:layout_height="66dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="21dp"
         android:background="@drawable/btn_other"
         android:text=" Puntos de recoleccón"
         app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
@@ -46,43 +47,50 @@
         android:id="@+id/imageView7"
         android:layout_width="114dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="144dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bttnPuntos"
         app:layout_constraintEnd_toEndOf="@+id/bttnPuntos"
-        app:srcCompat="@drawable/icono_puntos"
-        tools:layout_editor_absoluteY="342dp" />
+        app:layout_constraintTop_toTopOf="@+id/bttnPuntos"
+        app:srcCompat="@drawable/icono_puntos" />
 
     <Button
         android:id="@+id/CrearORG"
         android:layout_width="155dp"
-        android:layout_height="66dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/btn_other"
         android:text="Donar"
+        app:layout_constraintBottom_toTopOf="@+id/bttnPuntos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="260dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bttnEvento"
         android:layout_width="155dp"
-        android:layout_height="66dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/btn_other"
         android:onClick="irEventos"
         android:text="Eventos"
+        app:layout_constraintBottom_toTopOf="@+id/alimentosbttn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="433dp" />
+        app:layout_constraintTop_toBottomOf="@+id/bttnPuntos" />
 
     <Button
         android:id="@+id/alimentosbttn"
         android:layout_width="155dp"
-        android:layout_height="66dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/btn_other"
         android:text="Alimentos requeridos"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.608"
+        app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
 
@@ -91,54 +99,60 @@
         android:layout_width="114dp"
         android:layout_height="59dp"
         android:layout_marginEnd="144dp"
+        app:layout_constraintBottom_toBottomOf="@+id/CrearORG"
         app:layout_constraintEnd_toEndOf="@+id/CrearORG"
+        app:layout_constraintTop_toTopOf="@+id/CrearORG"
         app:srcCompat="@drawable/icono_donacion"
-        tools:layout_editor_absoluteY="260dp"
         tools:srcCompat="@drawable/icono_donacion" />
 
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="108dp"
         android:layout_height="81dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="144dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bttnEvento"
         app:layout_constraintEnd_toEndOf="@+id/bttnEvento"
+        app:layout_constraintTop_toTopOf="@+id/bttnEvento"
         app:srcCompat="@drawable/icono_eventos"
-        tools:layout_editor_absoluteY="426dp"
         tools:srcCompat="@drawable/icono_eventos" />
 
     <ImageView
         android:id="@+id/imageView11"
         android:layout_width="118dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginEnd="140dp"
+        app:layout_constraintBottom_toBottomOf="@+id/alimentosbttn"
         app:layout_constraintEnd_toEndOf="@+id/alimentosbttn"
+        app:layout_constraintTop_toTopOf="@+id/alimentosbttn"
         app:srcCompat="@drawable/basket"
-        tools:layout_editor_absoluteY="515dp"
         tools:srcCompat="@drawable/basket" />
 
     <Button
         android:id="@+id/buttonLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="42dp"
         android:background="@drawable/btn_bg"
         android:text="Log off"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintHorizontal_bias="0.907"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/alimentosbttn"
         app:layout_constraintVertical_bias="0.938" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
+        android:layout_marginTop="10dp"
         android:text="TextView"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/CrearORG"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Nombre"
+        app:layout_constraintVertical_bias="0.025" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
