--- a/app/src/main/res/drawable/btn_other.xml
+++ b/app/src/main/res/drawable/btn_other.xml
@@ -3,4 +3,9 @@
     <solid android:color="@color/blue">
     </solid>
     <corners android:radius="3dip"></corners>
+    <padding
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp"
+        android:bottom="10dp" />
 </shape>
