--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -35,8 +35,9 @@
         android:layout_width="155dp"
         android:layout_height="0dp"
         android:layout_marginBottom="21dp"
+        android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
-        android:text=" Puntos de recoleccón"
+        android:text="Puntos de recoleccón"
         app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.609"
@@ -59,6 +60,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="260dp"
         android:layout_marginBottom="20dp"
+        android:autoSizeTextType="none"
         android:background="@drawable/btn_other"
         android:text="Donar"
         app:layout_constraintBottom_toTopOf="@+id/bttnPuntos"
@@ -86,6 +88,7 @@
         android:layout_width="155dp"
         android:layout_height="0dp"
         android:layout_marginBottom="60dp"
+        android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Alimentos requeridos"
         app:layout_constraintBottom_toTopOf="@+id/buttonLog"
