Agregar constraints a eventos

--- a/app/src/main/res/layout/activity_punto_recoleccion.xml
+++ b/app/src/main/res/layout/activity_punto_recoleccion.xml
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="19dp"
         android:text="Puntos de Recolección"
+        android:textStyle="bold"
         android:textAlignment="center"
-        android:textColor="#35424A"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textPuntosInfo"
         app:layout_constraintEnd_toEndOf="parent"
