--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:text="hola"
+        android:text="Usuario"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
