--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -22,10 +22,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Direccion:"
+                android:text="Dirección:"
                 android:textColor="@color/black"
-                android:textSize="26sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textSize="20dp"/>
 
             <TextView
                 android:id="@+id/Direcccion"
@@ -33,8 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="Av.Prueba 3405"
-                android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
@@ -49,8 +48,8 @@
                 android:layout_height="wrap_content"
                 android:text="Fecha:"
                 android:textColor="@color/black"
-                android:textSize="26sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textSize="20dp"/>
 
             <TextView
                 android:id="@+id/Fecha"
@@ -58,8 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="07/05/2023"
-                android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
